# ProjektPythonVistula2026

./: .gitignore  README.md  main.py  pyproject.toml
src/: analiza.ipynb
